--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <p>Accede a esta guía interactiva desde cualquier dispositivo móvil.</p>
     <div class="qr-container">
         <img 
-        src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&color=00ff88&data=https://chavacruz2003.github.io/bote-inteligente/" 
+        src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&color=00ff88&data=https://chavacruz2003.github.io/bote-inteligente-/" 
         alt="QR Bote Inteligente">
     </div>
 </section>
@@ -266,4 +266,5 @@
 </script>
 
 </body>
+
 </html>
